feat(multi-roles): allow multiple roles
allow users to have multiple roles

DIGIB2-1214
